--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -35,18 +35,13 @@
       </div>
     </nav>
   </header>
-  
-  <div class="search-form">
-    <%= form_with url: search_path, method: :get, local: true do |f| %>
-      <%= f.text_field :keyword, value: @keyword %>
-      <%= f.submit "検索" %>
-    <% end %>
-  </div>
-  <div class="item-list">
-    <% @items.each do |item| %>
-      <%= item.name %>
-    <% end %>
-  </div>
+
+  <%= form_with url:search_path, method: :get, local: true do |f| %>
+          <%= f.text_field 'search[value]' %>
+          <%= f.select 'search[model]', options_for_select({ "Item" => "Item" }) %>
+          <%= f.select 'search[how]', options_for_select({ "完全一致" => "match", "前方一致" => "forward", "後方一致" => "backward", "部分一致" => "partical"  }) %>
+          <%= f.submit :"検索" %>
+        <% end %>
 
 
   <body>
