--- a/app/views/public/orders/new.html.erb
+++ b/app/views/public/orders/new.html.erb
@@ -11,9 +11,35 @@
   
   <label>お届け先</label>
   </br>
-  <%= f.radio_button :address, @customer.address %>
-  <%= f.label :address_customer_address, "〒#{@customer.postcode}　#{@customer.address}　#{@customer.last_name}#{@customer.first_name}" %>
-  </br>
+  <%= f.radio_button :address_option, 0, checked: "checked" %>  
+  <%= f.label :address, "ご自身の住所" %>  
+  <%= "〒#{@customer.postcode}" %>  
+  <%= @customer.address %>
+  <%= "#{@customer.last_name}#{@customer.first_name}" %>
+  <br>  
+  <%= f.radio_button :address_option, 1 %>  
+  <%= f.label :address, "登録済住所から選択" %>  
+  <%= f.collection_select :address , current_customer.addresses, :id, :address , :include_blank => "選択してください" %>  
+
+  <br>  
+  <%= f.radio_button :address_option, 2 %>  
+  <%= f.label :address, "新しいお届け先" %>  
+  <br>  
+
+  <%= f.label :postcode, "郵便番号(ハイフンなし）" %>  
+  <%= f.text_field :postcode %>  
+  <br>  
+
+  <%= f.label :address, "住所" %>  
+  <%= f.text_field :address %>  
+  <br>
+  
+  <%= f.label :name, "宛名" %>  
+  <%= f.text_field :name %>  
+  <br>  
+
+  <%= f.submit "確認画面へ進む" , class:"btn btn-primary" %>  
+
    
 
 
