--- a/app/views/admin/customers/show.html.erb
+++ b/app/views/admin/customers/show.html.erb
@@ -1,7 +1,10 @@
-<h3>マイページ</h3>
-<h3>登録情報</h3>
-<%= link_to "編集する", edit_customer_path,class: "btn btn-sm btn-success" %>
+<h3><%= @customer.last_name + @customer.first_name %>さんの会員情報詳細</h3>
+
 <table>
+  <tr>
+    <th>会員ID</th>
+    <th><%= @customer.id%></th>
+  </tr>
   <tr>
     <th>氏名</th>
     <th><%= @customer.last_name + @customer.first_name %></th>
@@ -26,10 +29,14 @@
     <th>メールアドレス</th>
     <th><%= @customer.email%></th>
   </tr>
+  <tr>
+    <th>会員ステータス</th>
+    <th>有効or無効（未実装）</th>
+  </tr>
 </table>
-
-<h3>配送先</h3>
-<%= link_to "一覧を見る", addresses_path(@customer)%>
-
-<h3>注文履歴</h3>
-<%= link_to "一覧を見る", orders_path(@customer) %>
+<span>
+  <%= link_to "編集する", edit_admin_customer_path,class: "btn btn-sm btn-success" %>
+</span>
+<spa>
+  <%= link_to "注文履歴一覧を見る", admin_orders_path,class:"btn btn-sm btn-primary" %>
+</spa>
