--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,40 @@
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
+
+  <header>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+      <div class="container">
+        <a class="navbar-brand" href="/"><span>ながのケーキ</span></a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavDropdown">
+          <ul class="navbar-nav ml-auto">
+          <% if customer_signed_in? %>
+            <li><%= link_to ' マイページ',customers_path(current_customer),class: 'fas fa-address-card nav-link text-light' %></li>
+            <li><%= link_to ' 商品一覧',items_path,class: 'fas fa-cookie-bite nav-link text-light' %></li>
+            <li><%= link_to ' カート',cart_items_path ,class: 'fas fa-cart-arrow-down nav-link text-light'%></li>
+            <li><%= link_to ' ログアウト', destroy_customer_session_path, method: :delete,class: 'fas fa-sign-out-alt nav-link text-light' %></li>
+          <% elsif admin_signed_in? %>
+            <li><%= link_to ' 商品一覧',admin_items_path,class: 'nav-link text-light' %></li>
+            <li><%= link_to ' 会員一覧',admin_customers_path,class: 'nav-link text-light' %></li>
+            <li><%= link_to ' 注文履歴',admin_orders_path ,class: 'nav-link text-light'%></li>
+            <li><%= link_to ' ジャンル一覧',admin_genres_path,class: 'nav-link text-light' %></li>
+            <li><%= link_to ' ログアウト', destroy_admin_session_path, method: :delete,class: 'nav-link text-light' %></li>
+          <% else %>
+            <li><%= link_to ' About',root_path,class: 'fas fa-home nav-link text-light' %></li>
+            <li><%= link_to ' 商品一覧',about_path,class: 'fas fa-cookie-bite nav-link text-light' %></li>
+            <li><%= link_to ' 新規登録', new_customer_registration_path,class: 'fas fa-user-plus nav-link text-light' %></li>
+            <li><%= link_to ' ログイン', new_customer_session_path ,class: 'fas fa-sign-in-alt nav-link text-light'%></li>
+          <% end %>
+          </ul>
+        </div>
+      </div>
+    </nav>
+  </header>
+
+
   <body>
     <%= yield %>
   </body>
