--- a/app/views/admin/customers/edit.html.erb
+++ b/app/views/admin/customers/edit.html.erb
@@ -1,4 +1,4 @@
-<%= form_with model:@customer, url:edit_customer_path, local:true do |f| %>
+<%= form_with model:@customer, url:admin_customer_path, local:true do |f| %>
 
 <div>
   <label>氏名</label>
