--- a/app/views/public/orders/new.html.erb
+++ b/app/views/public/orders/new.html.erb
@@ -1,46 +1,49 @@
 <h3>注文情報入力</h3>
-<%= form_with model:@order,url: order_confilm_path, method: :post,local: true do |f| %>
+<%= form_with model:@order,url: order_confirm_path, method: :post,local: true do |f| %>
   <label>支払方法</label>
   </br>
-  <%= f.radio_button :payment_method, :クレジットカード, checked: "checked" %>
-  <%= f.label :payment_method, 'クレジットカード' %>
+  <%= f.radio_button :payment_method, :credit_card, checked: "checked" %>
+  <%= f.label :payment_method, "クレジットカード" %>
   </br>
-  <%= f.radio_button :payment_method, :銀行振込 %>
-  <%= f.label :payment_method, '銀行振込' %>
+  <%= f.radio_button :payment_method, :bank_transfer %>
+  <%= f.label :payment_method, "銀行振込" %>
   </br>
-  
+
   <label>お届け先</label>
   </br>
-  <%= f.radio_button :address_option, 0, checked: "checked" %>  
-  <%= f.label :address, "ご自身の住所" %>  
-  <%= "〒#{@customer.postcode}" %>  
-  <%= @customer.address %>
-  <%= "#{@customer.last_name}#{@customer.first_name}" %>
-  <br>  
-  <%= f.radio_button :address_option, 1 %>  
-  <%= f.label :address, "登録済住所から選択" %>  
-  <%= f.collection_select :address , current_customer.addresses, :id, :address , :include_blank => "選択してください" %>  
-
-  <br>  
-  <%= f.radio_button :address_option, 2 %>  
-  <%= f.label :address, "新しいお届け先" %>  
-  <br>  
-
-  <%= f.label :postcode, "郵便番号(ハイフンなし）" %>  
-  <%= f.text_field :postcode %>  
-  <br>  
-
-  <%= f.label :address, "住所" %>  
-  <%= f.text_field :address %>  
+  <%= f.radio_button :address_option, 0, checked: "checked" %>
+  <%= f.label :address, "ご自身の住所" %>
   <br>
-  
-  <%= f.label :name, "宛名" %>  
-  <%= f.text_field :name %>  
-  <br>  
+  <%= "〒#{@customer.postcode}" %>
+  <%= @customer.address %><br>
+  <%= @customer.last_name+@customer.first_name %>
+  <br>
+  <br>
+  <%= f.radio_button :address_option, 1 %>
+  <%= f.label :address, "登録済住所から選択" %>
+  <br>
+  <%= f.collection_select :addressid , current_customer.addresses, :id, :address , :include_blank => "選択してください" %>
+  <br>
+  <br>
+  <%= f.radio_button :address_option, 2 %>
+  <%= f.label :address, "新しいお届け先" %>
+  <br>
 
-  <%= f.submit "確認画面へ進む" , class:"btn btn-primary" %>  
+  <%= f.label :postcode, "郵便番号(ハイフンなし）" %>
+  <%= f.text_field :postcode %>
+  <br>
 
-   
+  <%= f.label :address, "住所" %>
+  <%= f.text_field :address %>
+  <br>
+
+  <%= f.label :name, "宛名" %>
+  <%= f.text_field :name %>
+  <br>
+
+  <%= f.submit "確認画面へ進む" , class:"btn btn-primary" %>
+
+
 
 
 <% end %>
