--- a/app/views/public/items/index.html.erb
+++ b/app/views/public/items/index.html.erb
@@ -7,7 +7,7 @@
   <tbody>
     <% @genres.each do |genre| %>
       <tr>
-        <td><%= genre.name %></td>
+        <td><%= genre.name ) %></td>
       </tr>
     <% end %>
   </tbody>
@@ -17,15 +17,15 @@
 <table>
   <tbody>
     <% @items.each do |item| %>
-        <tr>
-          <td>
-            <%= link_to item_path(item) do %>
-              <%= attachment_image_tag item, :image, :fill, 100, 60, format: 'jpeg', fallback: "no_image.png" %>
-            <% end %>
-          </td>
-          <td><%= item.name %></td>
-          <td>￥<%= item.add_tax_price.to_s(:delimited) %></td>
-        </tr>
+      <tr>
+        <td>
+          <%= link_to item_path(item) do %>
+            <%= attachment_image_tag item, :image, :fill, 100, 60, format: 'jpeg', fallback: "no_image.png" %>
+          <% end %>
+        </td>
+        <td><%= item.name %></td>
+        <td>￥<%= item.add_tax_price.to_s(:delimited) %></td>
+      </tr>
     <% end %>
   </tbody>
 </table>
