--- a/app/views/public/items/index.html.erb
+++ b/app/views/public/items/index.html.erb
@@ -7,7 +7,7 @@
   <tbody>
     <% @genres.each do |genre| %>
       <tr>
-        <td><%= genre.name ) %></td>
+        <td><%= genre.name %></td>
       </tr>
     <% end %>
   </tbody>
