--- a/app/views/public/customers/show.html.erb
+++ b/app/views/public/customers/show.html.erb
@@ -32,4 +32,4 @@
 <%= link_to "一覧を見る", addresses_path(@customer)%>
 
 <h3>注文履歴</h3>
-<%= link_to "一覧を見る", orders_path(@customer) %>
+<%= link_to "一覧を見る", orders_path %>
