--- a/app/views/public/orders/new.html.erb
+++ b/app/views/public/orders/new.html.erb
@@ -22,7 +22,7 @@
   <%= f.radio_button :address_option, 1 %>
   <%= f.label :address, "登録済住所から選択" %>
   <br>
-  <%= f.collection_select :addressid , current_customer.addresses, :id, :address , :include_blank => "選択してください" %>
+  <%= f.collection_select :address_id , current_customer.addresses, :id, :address , :include_blank => "選択してください" %>
   <br>
   <br>
   <%= f.radio_button :address_option, 2 %>
