header_path & edit_form_default

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -33,8 +33,8 @@
             <li><%= link_to ' ログアウト', destroy_admin_session_path, method: :delete,class: 'nav-link text-light' %></li>
 
           <% else %>
-            <li><%= link_to ' About',root_path,class: 'fas fa-home nav-link text-light' %></li>
-            <li><%= link_to ' 商品一覧',about_path,class: 'fas fa-cookie-bite nav-link text-light' %></li>
+            <li><%= link_to ' About',about_path,class: 'fas fa-home nav-link text-light' %></li>
+            <li><%= link_to ' 商品一覧',items_path,class: 'fas fa-cookie-bite nav-link text-light' %></li>
             <li><%= link_to ' 新規登録', new_customer_registration_path,class: 'fas fa-user-plus nav-link text-light' %></li>
             <li><%= link_to ' ログイン', new_customer_session_path ,class: 'fas fa-sign-in-alt nav-link text-light'%></li>
           <% end %>
