--- a/app/views/public/cart_items/index.html.erb
+++ b/app/views/public/cart_items/index.html.erb
@@ -30,4 +30,4 @@
   <tr><th>合計金額</th><th><%= @price.to_s(:delimited) %></th></tr>
 </table>
 <%= link_to "買い物を続ける", root_path %>
-<%= link_to "情報入力に進む", order_path(new_order_path) %>
+<%= link_to "情報入力に進む", new_order_path %>
