--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -1,1 +1,46 @@
-<h1>トップページ</h1>
+<div class="card" style="max-width: 400px;">
+  <img class="card-img" src="https://thumb.photo-ac.com/8c/8c1355aeee667b321966fd58b6aac3ce_w.jpeg" alt="">
+  <div class="card-img-overlay">
+    <p class="text-white">
+      ようこそ、ながのCAKEへ！<br>
+      このサイトは、ケーキ販売のECサイトになります。<br>
+      会員でない方も商品閲覧はできますが、<br>
+      購入には会員登録が必要になります。<br>
+    </p>
+  </div>
+</div>
+
+<table>
+  <thead>
+    <tr>
+      <th>ジャンル検索</th>
+    </tr>
+  </thead>
+  <tbody>
+    <% @genres.each do |genre| %>
+      <tr>
+        <td>
+          <%= link_to genre.name, search_path('search[value]': genre.id, 'search[how]': "match", 'search[name]': genre.name ) %>
+        </td>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
+<!-- ジャンル検索機能は検索機能を作成する際に同時作成 qwertyシートに参考url有り -->
+<h1>新着商品</h1>
+<table>
+  <tbody>
+    <% @items.each do |item| %>
+      <tr>
+        <td>
+          <%= link_to item_path(item) do %>
+            <%= attachment_image_tag item, :image, :fill, 100, 60, format: 'jpeg', fallback: "no_image.png" %>
+          <% end %>
+        </td>
+        <td><%= item.name %></td>
+        <td>￥<%= item.add_tax_price.to_s(:delimited) %></td>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
+<%= link_to "すべての商品を見る＞", items_path %>
