--- a/app/views/public/searchs/search.html.erb
+++ b/app/views/public/searchs/search.html.erb
@@ -1,29 +1,32 @@
-<% if @model == "Item" %>
-    <h2>'<%= @value %>'の検索結果</h2>
-    <table class="table">
-        <thead>
-            <tr>
-                <th></th>
-                <th>商品名</th>
-                <th>価格</th>
-            </tr>
-        </thead>
-    <% @datas.each do |item| %>
-        <tbody>
-            <tr>
-                <th>
-                    <%= link_to item_path(item) do %>
-                    <%= attachment_image_tag item, :image, :fill, 100, 60, format: 'jpeg', fallback: "no_image.png" %>
-                    <% end %>
-                </th>
-                <th>
-                    <%= item.name %>
-                </th>
-                <th>
-                    ￥<%= item.add_tax_price.to_s(:delimited) %>
-                </th>
+<% if @name.present? %>
+  <h2><%= @name %>一覧</h2>
+<% else %>
+  <h2>'<%= @value %>'の検索結果</h2>
+<% end %>
 
-            </tr>
-        </tbody>
-    <% end %>
-    <% end %>
+<table class="table">
+    <thead>
+        <tr>
+            <th></th>
+            <th>商品名</th>
+            <th>価格</th>
+        </tr>
+    </thead>
+<% @datas.each do |item| %>
+    <tbody>
+        <tr>
+            <th>
+                <%= link_to item_path(item) do %>
+                <%= attachment_image_tag item, :image, :fill, 100, 60, format: 'jpeg', fallback: "no_image.png" %>
+                <% end %>
+            </th>
+            <th>
+                <%= item.name %>
+            </th>
+            <th>
+                ￥<%= item.add_tax_price.to_s(:delimited) %>
+            </th>
+
+        </tr>
+    </tbody>
+<% end %>
