--- a/app/views/admin/customers/index.html.erb
+++ b/app/views/admin/customers/index.html.erb
@@ -15,7 +15,7 @@
      <td><%= customer.id %></td>
      <td><%= link_to customer.last_name + customer.first_name,admin_customer_path(customer.id) %></td>
      <td><%= customer.email%></td>
-     <td>有効or無効（未実装）</td>
+     <td><%= customer.is_deleted ? '退会' : '有効' %></td>
     </tr>
   <% end %>
   <%= paginate @customers %>
