--- a/app/views/public/customers/confirm.html.erb
+++ b/app/views/public/customers/confirm.html.erb
@@ -12,5 +12,5 @@
   <%= link_to "退会しない",customers_path,class: "btn btn-sm btn-success" %>
 </span>
 <span>
-  <%= link_to "退会する（論理削除未実装）",customer_hide_path,class: "btn btn-sm btn-danger" %>
+  <%= link_to "退会する", customer_hide_path, method: :patch, data: { confilm: "本当に退会しますか？" }, class: "btn btn-sm btn-danger" %>
 </span>
