--- a/app/views/public/orders/index.html.erb
+++ b/app/views/public/orders/index.html.erb
@@ -5,23 +5,33 @@
     <tr>
       <th>注文日</th>
       <th>配送先</th>
-      <th>注文履歴</th>
+      <th>注文商品</th>
       <th>支払金額</th>
       <th>ステータス</th>
       <th>注文詳細</th>
     </tr>
   </thead>
   <tbody>
-   <%# @orders.each do |customer| %>
+   <% @orders.each do |order| %>
     <tr>
-     <td></td>
-     <td></td>
-     <td></td>
-     <td></td>
-     <td></td>
-     <td></td>
+     <td>
+        <%= order.created_at %>
+     </td>
+     <td>
+       〒<%= order.postcode %><br>
+       <%= order.address %><br>
+       <%= order.name %>
+     </td>
+       <td>
+         <% order.items.each do |item| %>
+           <%= item.name %><br>
+         <% end %>
+       </td>
+     <td><%= order.payment %></td>
+     <td><%= order.order_status_i18n %></td>
+     <td><%= link_to "表示する", order_path(order) %></td>
     </tr>
-  <%# end %>
-  <%#= paginate @oreders %>
+  <% end %>
+  <%= paginate @orders %>
   </tbody>
 </table>
