--- a/app/views/public/orders/index.html.erb
+++ b/app/views/public/orders/index.html.erb
@@ -15,7 +15,7 @@
    <% @orders.each do |order| %>
     <tr>
      <td>
-        <%= order.created_at %>
+        <%= order.created_at.to_s(:datetime_jp) %>
      </td>
      <td>
        〒<%= order.postcode %><br>
@@ -27,7 +27,7 @@
            <%= item.name %><br>
          <% end %>
        </td>
-     <td><%= order.payment %></td>
+     <td><%= order.payment.to_s(:delimited)  %></td>
      <td><%= order.order_status_i18n %></td>
      <td><%= link_to "表示する", order_path(order) %></td>
     </tr>
