--- a/app/views/admin/orders/index.html.erb
+++ b/app/views/admin/orders/index.html.erb
@@ -1,37 +1,33 @@
 <h3>注文履歴一覧</h3>
 
-<table class='table table-hover table-inverse'>
+<table>
   <thead>
     <tr>
-      <th>注文日</th>
-      <th>配送先</th>
-      <th>注文商品</th>
-      <th>支払金額</th>
-      <th>ステータス</th>
-      <th>注文詳細</th>
+      <th>購入日時</th>
+      <th>購入者</th>
+      <th>注文個数</th>
+      <th>注文ステータス</th>
     </tr>
   </thead>
   <tbody>
-   <% @orders.each do |order| %>
-    <tr>
-     <td>
-        <%= order.created_at.to_s(:datetime_jp) %>
-     </td>
-     <td>
-       〒<%= order.postcode %><br>
-       <%= order.address %><br>
-       <%= order.name %>
-     </td>
-       <td>
-         <% order.items.each do |item| %>
-           <%= item.name %><br>
-         <% end %>
-       </td>
-     <td><%= order.payment.to_s(:delimited)  %></td>
-     <td><%= order.order_status_i18n %></td>
-     <td><%= link_to "表示する", order_path(order) %></td>
-    </tr>
-  <% end %>
-  <%= paginate @orders %>
+    <% @orders.each do |order| %>
+      <tr>
+        <td>
+          <%= link_to admin_order_path(order) do %>
+          <%= order.created_at.to_s(:datetime_jp) %>
+          <% end %>
+        </td>
+        <td>
+          <%= order.customer.last_name %><%= order.customer.first_name %>
+        </td>
+        <% @count = 0 %>
+        <% order.order_items.each do |item| %>
+        <% @count += item.item_count %>
+        <% end %>
+        <td><%= @count %></td>
+        <td><%= order.order_status_i18n %></td>
+      </tr>
+    <% end %>
   </tbody>
 </table>
+<%= paginate @orders %>
