--- a/app/views/public/orders/show.html.erb
+++ b/app/views/public/orders/show.html.erb
@@ -27,7 +27,7 @@
   <tr>
     <th>商品合計</th>
     <% @payment = @order.payment - @order.delivery_charge %>
-    <th><%= @payment %></th>
+    <th><%= @payment.to_s(:delimited) %></th>
   </tr>
   <tr>
     <th>配送料</th>
@@ -35,7 +35,7 @@
   </tr>
   <tr>
     <th>ご請求額</th>
-    <th><%= @order.payment %></th>
+    <th><%= @order.payment.to_s(:delimited) %></th>
   </tr>
 </table>
 
@@ -57,8 +57,6 @@
      <td><%= items.item_count %></td>
      <% @price = items.purchase_price*items.item_count %>
      <td><%= @price.to_s(:delimited) %></td>
-     <td></td>
-     <td></td>
     </tr>
   </tbody>
   <% end %>
