--- a/app/views/admin/orders/show.html.erb
+++ b/app/views/admin/orders/show.html.erb
@@ -27,9 +27,8 @@
   <tr>
     <th>注文ステータス</th>
     <td>
-    <%=@order.order_status_i18n %>
     <%= form_with model: @order,url:  admin_order_path, local: true do |f| %>
-    <%= f.select :order_status, options_for_select(Order.order_statuses_i18n.keys,:selected =>@order.order_status_i18n ) %>
+    <%= f.select :order_status, options_for_select(Order.order_statuses_i18n.keys,:selected =>@order.order_status ) %>
     <%= f.submit "更新" , class:"btn btn-success" %>
     <% end %>
 
@@ -59,10 +58,9 @@
      <td><%= items.item_count %></td>
      <% @price = items.purchase_price*items.item_count %>
      <td><%= @price.to_s(:delimited) %></td>
-     <td><%= items.make_status_i18n %></td>
      <td>
       <%= form_with model: items,url:  admin_orders_item_path(items.id), local: true do |f| %>
-      <%= f.select :make_status, options_for_select(OrderItem.make_statuses.keys,:selected =>items.make_status_i18n) %>
+      <%= f.select :make_status, options_for_select(OrderItem.make_statuses_i18n.keys,:selected =>items.make_status) %>
       <%= f.submit "更新" , class:"btn btn-success" %>
       <% end %>
      </td>
