--- a/app/views/admin/orders/show.html.erb
+++ b/app/views/admin/orders/show.html.erb
@@ -28,7 +28,7 @@
     <th>注文ステータス</th>
     <td>
     <%= form_with model: @order,url:  admin_order_path, local: true do |f| %>
-    <%= f.select :order_status, options_for_select(Order.order_statuses_i18n.keys,:selected =>@order.order_status ) %>
+    <%= f.select :order_status, options_for_select(Order.order_statuses_i18n.invert,:selected =>@order.order_status ) %>
     <%= f.submit "更新" , class:"btn btn-success" %>
     <% end %>
 
@@ -60,7 +60,7 @@
      <td><%= @price.to_s(:delimited) %></td>
      <td>
       <%= form_with model: items,url:  admin_orders_item_path(items.id), local: true do |f| %>
-      <%= f.select :make_status, options_for_select(OrderItem.make_statuses_i18n.keys,:selected =>items.make_status) %>
+      <%= f.select :make_status, options_for_select(OrderItem.make_statuses_i18n.invert,:selected =>items.make_status) %>
       <%= f.submit "更新" , class:"btn btn-success" %>
       <% end %>
      </td>
