--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -23,3 +23,21 @@
   font-weight: 600;
   line-height: normal;
 }
+
+footer{
+  height: 70px;
+}
+
+.yoko {
+  display: flex;
+}
+
+.tate {
+  display: flex;
+  flex-direction: column;
+  margin: 10px;
+}
+
+.hgiht {
+  height: 400px;
+}
