--- a/app/views/public/homes/about.html.erb
+++ b/app/views/public/homes/about.html.erb
@@ -1,1 +1,11 @@
-<h1>アバウト画面</h1>
+<h1 class="text-center">About</h1>
+<p class="text-center">
+  ながのCAKEは全国発送可能なケーキ屋さんです。<br>
+お子様からお年寄りの方までお召し上がりいただけるよう、<br>
+様々なバリエーションをご用意しております。<br>
+また、全国へ発送可能ですので「いつ」でも「どこ」でもご注文いただけます。<br>
+ぜひご注文ください。<br>
+</p>
+<div class="text-center">
+  <img class="d-block mx-auto" src="https://publicdomainq.net/images/201804/03s/publicdomainq-0020622ihu.jpg">
+</div>
