--- a/app/views/admin/items/index.html.erb
+++ b/app/views/admin/items/index.html.erb
@@ -21,7 +21,7 @@
         </td>
         <td><%= item.excluded_price %></td>
         <td><%= item.genre.name %></td>
-        <td><%= item.is_active ? '販売中' : '販売停止中' %></td>
+        <td><%= item.is_active ? '販売中' : '売り切れ' %></td>
       </tr>
     <% end %>
   </tbody>
