--- a/app/views/admin/items/new.html.erb
+++ b/app/views/admin/items/new.html.erb
@@ -14,6 +14,6 @@
   <%= f.radio_button :is_active, true %>
   <%= f.label :is_active, '販売中', value: true %>
   <%= f.radio_button :is_active, false %>
-  <%= f.label :is_active, '販売停止中', value: false %>
+  <%= f.label :is_active, '売り切れ', value: false %>
   <%= f.submit "新規登録" %>
 <% end %>
