--- a/app/views/admin/items/show.html.erb
+++ b/app/views/admin/items/show.html.erb
@@ -9,5 +9,5 @@
 <h4>税込価格（税抜価格）</h4>
 <%= @item.add_tax_price.to_s(:delimited) %>(<%= @item.excluded_price.to_s(:delimited) %>)円　<!-- .to_s(:delimited)は３桁以上の数に自動でカンマを打ってくれる-->
 <h4>販売ステータス</h4>
-<%= @item.is_active ? '販売中' : '販売停止中' %>
+<%= @item.is_active ? '販売中' : '売り切れ' %>
 <%= link_to "編集する", edit_admin_item_path(@item) %>
