--- a/app/views/public/items/show.html.erb
+++ b/app/views/public/items/show.html.erb
@@ -7,7 +7,9 @@
   <tbody>
     <% @genres.each do |genre| %>
       <tr>
-        <td><%= genre.name %></td>
+        <td>
+          <%= link_to genre.name, search_path('search[value]': genre.id, 'search[how]': "match", 'search[name]': genre.name) %>
+        </td>
       </tr>
     <% end %>
   </tbody>
