--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,10 +1,10 @@
-<h2>Forgot your password?</h2>
+<h2>パスワードをお忘れの方</h2>
 
 <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
   <%= render "devise/shared/error_messages", resource: resource %>
 
   <div class="field">
-    <%= f.label :email %><br />
+    メールアドレス<br/>
     <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
   </div>
 
