--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,65 +1,56 @@
-<h2>Sign up</h2>
+<h2>新規会員登録</h2>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= render "devise/shared/error_messages", resource: resource %>
 
   <div class="field">
-    <%= f.label :last_name %><br />
-    <%= f.text_field :last_name, autofocus: true, autocomplete: "last_name" %>
+    名前<br>
+    <span>（姓）<%= f.text_field :last_name, autofocus: true, autocomplete: "last_name" %></span>
+    <span>（名）<%= f.text_field :first_name, autofocus: true, autocomplete: "first_name" %></span>
   </div>
 
-  <div class="field">
-    <%= f.label :first_name %><br />
-    <%= f.text_field :first_name, autofocus: true, autocomplete: "first_name" %>
-  </div>
+  </div　class="field">
+    フリガナ<br>
+    <span>（姓）<%= f.text_field :last_name_kana, autofocus: true, autocomplete: "last_name_kana" %></span>
+    <spna>（名）<%= f.text_field :first_name_kana, autofocus: true, autocomplete: "first_name_kana" %></spna>
 
   <div class="field">
-    <%= f.label :last_name_kana %><br />
-    <%= f.text_field :last_name_kana, autofocus: true, autocomplete: "last_name_kana" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :first_name_kana %><br />
-    <%= f.text_field :first_name_kana, autofocus: true, autocomplete: "first_name_kana" %>
-  </div>
-
-
-  <div class="field">
-    <%= f.label :email %><br />
+    メールアドレス<br/>
     <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
   </div>
 
   <div class="field">
-    <%= f.label :postcode %><br />
+    郵便番号（ハイフンなし）<br/>
     <%= f.text_field :postcode, autofocus: true, autocomplete: "postcode" %>
   </div>
 
   <div class="field">
-    <%= f.label :address %><br />
+    住所<br/>
     <%= f.text_field :address, autofocus: true, autocomplete: "address" %>
   </div>
 
   <div class="field">
-    <%= f.label :phone_number %><br />
+    電話番号（ハイフンなし）<br/>
     <%= f.text_field :phone_number, autofocus: true, autocomplete: "phone_number" %>
   </div>
 
   <div class="field">
-    <%= f.label :password %>
+    パスワード<br>
     <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
+    <em>(<%= @minimum_password_length %>文字以上)</em>
+    <% end %><br/>
     <%= f.password_field :password, autocomplete: "new-password" %>
   </div>
 
   <div class="field">
-    <%= f.label :password_confirmation %><br />
+    パスワード<br>
+    （確認）<br/>
     <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
   </div>
-
+  <br>
   <div class="actions">
     <%= f.submit "新規会員登録" %>
   </div>
 <% end %>
-
+<br>
 <%= render "devise/shared/links" %>
