--- a/app/views/public/homes/about.html.erb
+++ b/app/views/public/homes/about.html.erb
@@ -7,5 +7,8 @@
 ぜひご注文ください。<br>
 </p>
 <div class="text-center">
-  <img class="d-block mx-auto" src="https://publicdomainq.net/images/201804/03s/publicdomainq-0020622ihu.jpg">
+  <img class="d-block mx-auto" src="https://thumb.photo-ac.com/ec/ec8584da1b78f6431c3293c320fbc410_w.jpeg">
 </div>
+<nav class="navbar fixed-bottom navbar-dark bg-dark">
+  <a class="navbar-brand" href="#!">nagano-cake</a>
+</nav>
