--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row">
     <div class="col-lg-3 my-3">
-      <table class="table table-striped border">
+      <table class="table table-borderd">
         <thead>
           <tr>
             <th>ジャンル検索</th>
@@ -20,7 +20,7 @@
     </div>
     <div class="col-lg-9">
       <div class="card mt-10px my-3" style="max-width: 800px;">
-        <img class="card-img hgiht" src="https://publicdomainq.net/images/201804/03s/publicdomainq-0020622ihu.jpg" alt="">
+        <img class="card-img hgiht" src="https://thumb.photo-ac.com/ec/ec8584da1b78f6431c3293c320fbc410_w.jpeg" alt="">
         <div class="card-img-overlay d-flex">
           <p class="text-white">
             ようこそ、ながのCAKEへ！<br>
@@ -51,3 +51,6 @@
     </div>
   </div>
 </div>
+<footer class="footer navbar navbar-expand-lg navbar-dark bg-dark">
+  <a class="text-white">nagano_cake</a>
+</footer>
