--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -24,8 +24,14 @@
   line-height: normal;
 }
 
-footer{
-  height: 70px;
+wrepper {
+  margin-bottom: -60px;
+}
+
+.footer {
+  width:100%;
+  height: 60px;
+  
 }
 
 .yoko {
