--- a/app/views/public/homes/about.html.erb
+++ b/app/views/public/homes/about.html.erb
@@ -1,4 +1,4 @@
-<h1 class="text-center">About</h1>
+<h1 class="text-center text-danger">About</h1>
 <p class="text-center">
   ながのCAKEは全国発送可能なケーキ屋さんです。<br>
 お子様からお年寄りの方までお召し上がりいただけるよう、<br>
@@ -9,6 +9,5 @@
 <div class="text-center">
   <img class="d-block mx-auto" src="https://thumb.photo-ac.com/ec/ec8584da1b78f6431c3293c320fbc410_w.jpeg">
 </div>
-<nav class="navbar fixed-bottom navbar-dark bg-dark">
-  <a class="navbar-brand" href="#!">nagano-cake</a>
-</nav>
+<br>
+
