--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -19,10 +19,12 @@
       </table>
     </div>
     <div class="col-lg-9">
-      <div class="card mt-10px my-3" style="max-width: 800px;">
-        <img class="card-img hgiht" src="https://thumb.photo-ac.com/ec/ec8584da1b78f6431c3293c320fbc410_w.jpeg" alt="">
+      <div class="card mt-10px my-3">
+        <div class="card-img hgiht">
+          <%= image_tag 'top_image_2.jpeg',:size =>'830x400' %>
+        </div>
         <div class="card-img-overlay d-flex">
-          <p class="text-white">
+          <p class="text-dark h4">
             ようこそ、ながのCAKEへ！<br>
             このサイトは、ケーキ販売のECサイトになります。<br>
             会員でない方も商品閲覧はできますが、<br>
@@ -51,6 +53,3 @@
     </div>
   </div>
 </div>
-<footer class="footer navbar navbar-expand-lg navbar-dark bg-dark">
-  <a class="text-white">nagano_cake</a>
-</footer>
