--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -30,8 +30,7 @@ wrepper {
 
 .footer {
   width:100%;
-  height: 60px;
-  
+  height: 80px;
 }
 
 .yoko {
@@ -46,4 +45,13 @@ wrepper {
 
 .hgiht {
   height: 400px;
+}
+
+.a {
+  margin-left: auto;
+  display: flex;
+}
+
+.b {
+  margin: 15px 20px 0 20px;
 }
