--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,12 +11,13 @@
 
 
   <header>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-secondary">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-white border">
       <div class="container">
-        <%#<a class="navbar-brand" href="/"><span>ながのケーキ</span></a>%>
-        <%= image_tag 'top_logo(naganocake).jpeg',:size =>'250x100' %>
+        <%= link_to root_path do %>
+          <%= image_tag 'log_2.png',:size =>'250x100' %>
+        <% end %>
         <% if customer_signed_in? %>
-          <a class="fas text-light">ようこそ,<%= current_customer.last_name %>さん!</a>
+          <a class="fas text-danger">ようこそ,<%= current_customer.last_name %>さん!</a>
         <% end %>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -24,23 +25,23 @@
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
           <ul class="navbar-nav ml-auto">
           <% if customer_signed_in? %>
-            <li><%= link_to ' マイページ',customers_path(current_customer),class: 'fas fa-address-card nav-link text-light' %></li>
-            <li><%= link_to ' 商品一覧',items_path,class: 'fas fa-cookie-bite nav-link text-light' %></li>
-            <li><%= link_to ' カート',cart_items_path ,class: 'fas fa-cart-arrow-down nav-link text-light'%></li>
-            <li><%= link_to ' ログアウト', destroy_customer_session_path, method: :delete,class: 'fas fa-sign-out-alt nav-link text-light' %></li>
+            <li><%= link_to ' マイページ',customers_path(current_customer),class: 'fas fa-address-card nav-link text-danger' %></li>
+            <li><%= link_to ' 商品一覧',items_path,class: 'fas fa-cookie-bite nav-link text-danger' %></li>
+            <li><%= link_to ' カート',cart_items_path ,class: 'fas fa-cart-arrow-down nav-link text-danger'%></li>
+            <li><%= link_to ' ログアウト', destroy_customer_session_path, method: :delete,class: 'fas fa-sign-out-alt nav-link text-danger' %></li>
 
           <% elsif admin_signed_in? %>
-            <li><%= link_to ' 商品一覧',admin_items_path,class: 'nav-link text-light' %></li>
-            <li><%= link_to ' 会員一覧',admin_customers_path,class: 'nav-link text-light' %></li>
-            <li><%= link_to ' 注文履歴',admin_orders_path ,class: 'nav-link text-light'%></li>
-            <li><%= link_to ' ジャンル一覧',admin_genres_path,class: 'nav-link text-light' %></li>
-            <li><%= link_to ' ログアウト', destroy_admin_session_path, method: :delete,class: 'nav-link text-light' %></li>
+            <li><%= link_to ' 商品一覧',admin_items_path,class: 'nav-link text-danger' %></li>
+            <li><%= link_to ' 会員一覧',admin_customers_path,class: 'nav-link text-danger' %></li>
+            <li><%= link_to ' 注文履歴',admin_orders_path ,class: 'nav-link text-danger'%></li>
+            <li><%= link_to ' ジャンル一覧',admin_genres_path,class: 'nav-link text-danger' %></li>
+            <li><%= link_to ' ログアウト', destroy_admin_session_path, method: :delete,class: 'nav-link text-danger' %></li>
 
           <% else %>
-            <li><%= link_to ' About',about_path,class: 'fas fa-home nav-link text-light' %></li>
-            <li><%= link_to ' 商品一覧',items_path,class: 'fas fa-cookie-bite nav-link text-light' %></li>
-            <li><%= link_to ' 新規登録', new_customer_registration_path,class: 'fas fa-user-plus nav-link text-light' %></li>
-            <li><%= link_to ' ログイン', new_customer_session_path ,class: 'fas fa-sign-in-alt nav-link text-light'%></li>
+            <li><%= link_to ' About',about_path,class: 'fas fa-home nav-link text-danger' %></li>
+            <li><%= link_to ' 商品一覧',items_path,class: 'fas fa-cookie-bite nav-link text-danger' %></li>
+            <li><%= link_to ' 新規登録', new_customer_registration_path,class: 'fas fa-user-plus nav-link text-danger' %></li>
+            <li><%= link_to ' ログイン', new_customer_session_path ,class: 'fas fa-sign-in-alt nav-link text-danger'%></li>
           <% end %>
           </ul>
         </div>
@@ -56,6 +57,19 @@
 
   <body>
     <%= yield %>
+    <footer class="footer navbar navbar-expand-lg navbar-dark bg-white border">
+  <div class="a">
+    <div class="text-danger font-weight-bold h4">
+      <%= link_to root_path do %>
+        <%= image_tag 'log_2.png',:size =>'200x70' %>
+      <% end %>
+    </div>
+    <span class="text-danger">
+      長野県長野市〇〇町〇丁目〇番</br>
+      Tel: 026-×××-××××
+    </span>
+  </div>
+</footer>
   </body>
 
 </html>
