--- a/app/assets/stylesheets/public/customers.scss
+++ b/app/assets/stylesheets/public/customers.scss
@@ -1,3 +1,37 @@
 // Place all the styles related to the public::customers controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.customer_show_th{
+background-color: silver;
+  width: 150px;
+  height: 50px;
+  text-align: center;
+  font-size: 15px;
+}
+
+.customer_show_th_content{
+  width: 400px;
+  height: 50px;
+  font-size: 15px;
+}
+
+.title{
+  font-size: 20px;
+  padding: 20px 30px 20px 0px;
+}
+
+.customer_edit{
+  margin-left: 30px;
+  margin-bottom: 30px;
+}
+
+.customer_table{
+  margin: 20px 0px 20px 0px;
+}
+
+.customer_edit_th{
+  width: 150px;
+  height: 50px;
+  font-size: 15px;
+}
