--- a/app/views/public/customers/edit.html.erb
+++ b/app/views/public/customers/edit.html.erb
@@ -1,41 +1,43 @@
-<%= form_with model:@customer, url:edit_customer_path, local:true do |f| %>
+<div class="container">
+  <div class="row">
+    <div class="ccol-lg-11 offset-lg-1">
+      <%= form_with model:@customer, url:edit_customer_path, local:true do |f| %>
+      <table class="customer_table">
+        <tr>
+          <th class="customer_edit_th">氏名</th>
+          <td><%= f.text_field :last_name %></td>
+          <td><%= f.text_field :first_name %></td>
+        </tr>
+        <tr>
+          <th class="customer_edit_th">フリガナ</th>
+          <td><%= f.text_field :last_name_kana %></td>
+          <td><%= f.text_field :first_name_kana %></td>
+        </tr>
+         <tr>
+          <th class="customer_edit_th">郵便番号</th>
+          <td><%= f.text_field :postcode %></td>
+        </tr>
+          <th class="customer_edit_th">住所</th>
+          <td><%= f.text_field :address %></td>
+        </tr>
+          <th class="customer_edit_th">電話番号</th>
+          <td><%= f.text_field :phone_number %></td>
+        </tr>
+        <tr>
+          <th class="customer_edit_th">メールアドレス</th>
+          <td><%= f.text_field :email %></td>
+        </tr>
+      </table>
 
-  <label>氏名</label>
-  <%= f.text_field :last_name %>
-  <%= f.text_field :first_name %>
-</div>
-
-<div>
-  <lavel>フリガナ</lavel>
-  <%= f.text_field :last_name_kana %>
-  <%= f.text_field :first_name_kana %>
-</div>
-  <lavel>郵便番号</lavel>
-  <%= f.text_field :postcode %>
-<div>
-  <lavel>住所</lavel>
-    <%= f.text_field :address %>
-</div>
-
-<div>
-  <lavel>電話番号</lavel>
-    <%= f.text_field :phone_number %>
-</div>
-
-<div>
-  <lavel>メールアドレス</lavel>
-    <%= f.text_field :email %>
-</div>
-
-<div>
-  <span>
-    <%= f.submit "編集内容を保存",class: "btn btn-sm btn-success" %>
-  </span>
-    <% end %>
-  <span>
-    <%= link_to "退会する",customer_confirm_path , method: :POST, class: "btn btn-sm btn-danger" %>
-  </span>
-</div>
-
-
-
+      <div>
+        <%= f.submit "編集内容を保存",class: "btn btn-sm btn-success" %>
+        <% end %>
+      </div>
+      <br>
+      <div>
+        <%= link_to "退会する",customer_confirm_path , method: :POST, class: "btn btn-sm btn-danger" %>
+      </div>
+      <br>
+    </div>
+  </div>
+</div
