--- a/app/views/public/customers/show.html.erb
+++ b/app/views/public/customers/show.html.erb
@@ -1,35 +1,47 @@
-<h3>マイページ</h3>
-<h3>登録情報</h3>
-<%= link_to "編集する", edit_customer_path,class: "btn btn-sm btn-success" %>
-<table>
-  <tr>
-    <th>氏名</th>
-    <th><%= @customer.last_name + @customer.first_name %></th>
-  </tr>
-  <tr>
-    <th>カナ</th>
-    <th><%= @customer.last_name_kana + @customer.first_name_kana %></th>
-  </tr>
-  <tr>
-    <th>郵便番号</th>
-    <th><%= @customer.postcode%></th>
-  </tr>
-  <tr>
-    <th>住所</th>
-    <th><%= @customer.address%></th>
-  </tr>
-  <tr>
-    <th>電話番号</th>
-    <th><%= @customer.phone_number%></th>
-  </tr>
-  <tr>
-    <th>メールアドレス</th>
-    <th><%= @customer.email%></th>
-  </tr>
-</table>
 
-<h3>配送先</h3>
-<%= link_to "一覧を見る", addresses_path(@customer)%>
 
-<h3>注文履歴</h3>
-<%= link_to "一覧を見る", orders_path %>
+<div class="container">
+  <div class="row">
+    <div class="col-lg-11 offset-lg-1 ">
+      <br>
+      <h3>マイページ</h3>
+      <span class="title">登録情報<span>
+      <span class="customer_edit"><%= link_to "編集する", edit_customer_path,class: "btn btn-sm btn-success" %></span>
+      <table border="1" style="border-collapse: collapse" class="customer_table">
+        <tr>
+          <th class="customer_show_th">氏名</th>
+          <th class="customer_show_th_content"><%= @customer.last_name + @customer.first_name %></th>
+        </tr>
+        <tr>
+          <th class="customer_show_th">カナ</th>
+          <th class="customer_show_th_content"><%= @customer.last_name_kana + @customer.first_name_kana %></th>
+        </tr>
+        <tr>
+          <th class="customer_show_th" >郵便番号</th>
+          <th class="customer_show_th_content">〒<%= @customer.postcode%></th>
+        </tr>
+        <tr>
+          <th class="customer_show_th">住所</th>
+          <th class="customer_show_th_content"><%= @customer.address%></th>
+        </tr>
+        <tr>
+          <th class="customer_show_th">電話番号</th>
+          <th class="customer_show_th_content"><%= @customer.phone_number%></th>
+        </tr>
+        <tr>
+          <th class="customer_show_th">メールアドレス</th>
+          <th class="customer_show_th_content"><%= @customer.email%></th>
+        </tr>
+    </table>
+    <div class="link">
+      <%= link_to "配送先一覧", addresses_path(@customer),class: "btn btn-sm btn-primary" %>
+    </div>
+    <br>
+    <div class="link">
+      <%= link_to "注文履歴一覧", orders_path,class: "btn btn-sm btn-primary" %>
+    </div>
+    </div>
+  </div>
+</div>
+
+
