--- a/app/views/public/orders/index.html.erb
+++ b/app/views/public/orders/index.html.erb
@@ -1,14 +1,17 @@
+<div class="container">
+    <div class="row">
+         <div class="col-lg-12 ">
 <h3>注文履歴一覧</h3>
 
-<table class='table table-hover table-inverse'>
+<table class="order_list" border="1" style="border-collapse: collapse" >
   <thead>
     <tr>
-      <th>注文日</th>
-      <th>配送先</th>
-      <th>注文商品</th>
-      <th>支払金額</th>
-      <th>ステータス</th>
-      <th>注文詳細</th>
+      <th class="order_list_created_at">注文日</th>
+      <th class="order_list_address">配送先</th>
+      <th class="order_list_item_names">注文商品</th>
+      <th class="order_list_payment">支払金額</th>
+      <th class="order_list_status">ステータス</th>
+      <th class="order_list_link">注文詳細</th>
     </tr>
   </thead>
   <tbody>
@@ -29,9 +32,12 @@
        </td>
      <td><%= order.payment.to_s(:delimited)  %></td>
      <td><%= order.order_status_i18n %></td>
-     <td><%= link_to "表示する", order_path(order) %></td>
+     <td><%= link_to "表示する", order_path(order),class: 'btn btn-sm btn-primary' %></td>
     </tr>
   <% end %>
   <%= paginate @orders %>
   </tbody>
 </table>
+</div>
+</div>
+</div>
