--- a/app/assets/stylesheets/addresses.scss
+++ b/app/assets/stylesheets/addresses.scss
@@ -1,3 +1,31 @@
 // Place all the styles related to the addresses controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.address_index_list_th_1{
+  background-color: silver;
+  width: 150px;
+  height: 50px;
+  text-align: center;
+  font-size: 15px;
+}
+
+.address_index_list_th_2{
+  background-color: silver;
+  width: 300px;
+  height: 50px;
+  text-align: center;
+  font-size: 15px;
+}
+
+.address_index_list_th_3{
+  background-color: silver;
+  width: 200px;
+  height: 50px;
+  text-align: center;
+  font-size: 15px;
+}
+
+.address_index_list_td_edit_and_destroy{
+  text-align: center;
+}
