--- a/app/views/admin/customers/edit.html.erb
+++ b/app/views/admin/customers/edit.html.erb
@@ -1,43 +1,56 @@
-<%= form_with model:@customer, url:admin_customer_path, local:true do |f| %>
+<div class="container">
+  <div class="row">
+    <div class="ccol-lg-11 offset-lg-1">
+      <br>
+      <h3><%= @customer.last_name + @customer.first_name %>さんの会員情報編集</h3>
+      <%= form_with model:@customer, url:admin_customer_path, local:true do |f| %>
+      <table class="customer_table">
+        <tr>
+          <th class="customer_edit_th">会員ID</th>
+            <td><%= @customer.id %></td>
+        </tr>
+        <tr>
+          <th class="customer_edit_th">氏名</th>
+          <td><%= f.text_field :last_name %></td>
+          <td><%= f.text_field :first_name %></td>
+        </tr>
+        <tr>
+          <th class="customer_edit_th">フリガナ</th>
+            <td> <%= f.text_field :last_name_kana %></td>
+            <td><%= f.text_field :first_name_kana %></td>
+        </tr>
+        <tr>
+          <th class="customer_edit_th">郵便番号</th>
+            <td><%= f.text_field :postcode %></td>
+        </tr>
+        <tr>
+          <th class="customer_edit_th">住所</th>
+            <td><%= f.text_field :address %></td>
+        </tr>
+        <tr>
+          <th class="customer_edit_th">電話番号</th>
+            <td><%= f.text_field :phone_number %></td>
+        </tr>
+        <tr>
+          <th class="customer_edit_th">メールアドレス</th>
+            <td><%= f.text_field :email %></td>
+        </tr>
+        <tr>
+          <th class="customer_edit_th">会員ステータス</th>
+            <td>
+            <%= f.radio_button :is_deleted, false %>
+            <%= f.label :is_deleted, '有効' %>
+            <%= f.radio_button :is_deleted, true %>
+            <%= f.label :is_deleted, '退会' %>
+            </td>
+      </table>
 
-<div>
-  <label>氏名</label>
-  <%= f.text_field :last_name %>
-  <%= f.text_field :first_name %>
+      <span>
+        <%= f.submit "編集内容を保存",class: "btn btn-sm btn-success" %>
+      </span>
+
+      <% end %>
+    <br>
+    </div>
+  </div>
 </div>
-
-<div>
-  <lavel>フリガナ</lavel>
-  <%= f.text_field :last_name_kana %>
-  <%= f.text_field :first_name_kana %>
-</div>
-  <lavel>郵便番号</lavel>
-  <%= f.text_field :postcode %>
-<div>
-  <lavel>住所</lavel>
-    <%= f.text_field :address %>
-</div>
-
-<div>
-  <lavel>電話番号</lavel>
-    <%= f.text_field :phone_number %>
-</div>
-
-<div>
-  <lavel>メールアドレス</lavel>
-    <%= f.text_field :email %>
-</div>
-
-<div>
-  <lavel>会員ステータス</lavel>
-    <%= f.radio_button :is_deleted, false %>
-    <%= f.label :is_deleted, '有効' %>
-    <%= f.radio_button :is_deleted, true %>
-    <%= f.label :is_deleted, '退会' %>
-</div>
-
-<span>
-  <%= f.submit "編集内容を保存",class: "btn btn-sm btn-success" %>
-</span>
-
-<% end %>
