--- a/app/views/admin/customers/index.html.erb
+++ b/app/views/admin/customers/index.html.erb
@@ -1,23 +1,30 @@
-<h3>会員一覧</h3>
-
-<table class='table table-hover table-inverse'>
-  <thead>
-    <tr>
-      <th>会員ID</th>
-      <th>氏名</th>
-      <th>メールアドレス</th>
-      <th>ステータス</th>
-    </tr>
-  </thead>
-  <tbody>
-   <% @customers.each do |customer| %>
-    <tr>
-     <td><%= customer.id %></td>
-     <td><%= link_to customer.last_name + customer.first_name,admin_customer_path(customer.id) %></td>
-     <td><%= customer.email%></td>
-     <td><%= customer.is_deleted ? '退会' : '有効' %></td>
-    </tr>
-  <% end %>
-  <%= paginate @customers %>
-  </tbody>
-</table>
+<div class="container">
+  <div class="row">
+    <div class="ccol-lg-11 offset-lg-1">
+      <br>
+      <h3>会員一覧</h3>
+      <table table border=1 frame="hsides"rules="rows">
+        <thead>
+          <tr>
+            <th class='admin_customer_index_th_1'>会員ID</th>
+            <th class='admin_customer_index_th_2'>氏名</th>
+            <th class='admin_customer_index_th_2'>メールアドレス</th>
+            <th class='admin_customer_index_th_1'>ステータス</th>
+          </tr>
+        </thead>
+        <tbody>
+         <% @customers.each do |customer| %>
+          <tr class='admin_customer_index_tr'>
+           <td class='admin_customer_index_td'><%= customer.id %></td>
+           <td class='admin_customer_index_td'><%= link_to customer.last_name + customer.first_name,admin_customer_path(customer.id) %></td>
+           <td class='admin_customer_index_td'><%= customer.email%></td>
+           <td class='admin_customer_index_td'><%= customer.is_deleted ? '退会' : '有効' %></td>
+          </tr>
+        <% end %>
+        <%= paginate @customers %>
+        </tbody>
+      </table>
+    <br>
+    </div>
+  </div>
+</div>
