--- a/app/views/admin/customers/show.html.erb
+++ b/app/views/admin/customers/show.html.erb
@@ -1,42 +1,48 @@
-<h3><%= @customer.last_name + @customer.first_name %>さんの会員情報詳細</h3>
-
-<table>
-  <tr>
-    <th>会員ID</th>
-    <th><%= @customer.id%></th>
-  </tr>
-  <tr>
-    <th>氏名</th>
-    <th><%= @customer.last_name + @customer.first_name %></th>
-  </tr>
-  <tr>
-    <th>カナ</th>
-    <th><%= @customer.last_name_kana + @customer.first_name_kana %></th>
-  </tr>
-  <tr>
-    <th>郵便番号</th>
-    <th><%= @customer.postcode%></th>
-  </tr>
-  <tr>
-    <th>住所</th>
-    <th><%= @customer.address%></th>
-  </tr>
-  <tr>
-    <th>電話番号</th>
-    <th><%= @customer.phone_number%></th>
-  </tr>
-  <tr>
-    <th>メールアドレス</th>
-    <th><%= @customer.email%></th>
-  </tr>
-  <tr>
-    <th>会員ステータス</th>
-    <th><%= @customer.is_deleted ? '退会' : '有効' %></th>
-  </tr>
-</table>
-<span>
-  <%= link_to "編集する", edit_admin_customer_path,class: "btn btn-sm btn-success" %>
-</span>
-<spa>
-  <%= link_to "注文履歴一覧を見る", admin_orders_path,class:"btn btn-sm btn-primary" %>
-</spa>
+<div class="container">
+  <div class="row">
+    <div class="col-lg-11 offset-lg-1 ">
+      <br>
+      <h3><%= @customer.last_name + @customer.first_name %>さんの会員情報詳細</h3>
+      <table border="1" style="border-collapse: collapse" class="customer_table">
+        <tr>
+          <th class="customer_show_th">ID</th>
+          <th class="customer_show_th_content"><%= @customer.id %></th>
+        </tr>
+        <tr>
+          <th class="customer_show_th">氏名</th>
+          <th class="customer_show_th_content"><%= @customer.last_name + @customer.first_name %></th>
+        </tr>
+        <tr>
+          <th class="customer_show_th">カナ</th>
+          <th class="customer_show_th_content"><%= @customer.last_name_kana + @customer.first_name_kana %></th>
+        </tr>
+        <tr>
+          <th class="customer_show_th" >郵便番号</th>
+          <th class="customer_show_th_content">〒<%= @customer.postcode%></th>
+        </tr>
+        <tr>
+          <th class="customer_show_th">住所</th>
+          <th class="customer_show_th_content"><%= @customer.address%></th>
+        </tr>
+        <tr>
+          <th class="customer_show_th">電話番号</th>
+          <th class="customer_show_th_content"><%= @customer.phone_number%></th>
+        </tr>
+        <tr>
+          <th class="customer_show_th">メールアドレス</th>
+          <th class="customer_show_th_content"><%= @customer.email%></th>
+        </tr>
+        <tr>
+          <th class="customer_show_th">会員ステータス</th>
+          <th class="customer_show_th_content"><%= @customer.is_deleted ? '退会' : '有効' %></th>
+        </tr>
+    </table>
+    <br>
+    <div class="link">
+      <span><%= link_to "注文履歴一覧", orders_path,class: "btn btn-sm btn-primary" %></span>
+      <span class="customer_edit"><%= link_to "編集する", edit_admin_customer_path,class: "btn btn-sm btn-success" %></span>
+    </div>
+    <br>
+    </div>
+  </div>
+</div>
