--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,56 +1,65 @@
-<h2>新規会員登録</h2>
+<div class="container">
+  <div class="row">
+    <div class="ccol-lg-11 offset-lg-1">
+      <br>
+      <h2>新規会員登録</h2>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
+      <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+        <%= render "devise/shared/error_messages", resource: resource %>
 
-  <div class="field">
-    名前<br>
-    <span>（姓）<%= f.text_field :last_name, autofocus: true, autocomplete: "last_name" %></span>
-    <span>（名）<%= f.text_field :first_name, autofocus: true, autocomplete: "first_name" %></span>
+        <div class="field">
+          名前<br>
+          <span><%= f.text_field :last_name, autofocus: true, autocomplete: "last_name" %></span>
+          <span><%= f.text_field :first_name, autofocus: true, autocomplete: "first_name" %></span>
+        </div>
+
+        </div　class="field">
+          フリガナ<br>
+          <span><%= f.text_field :last_name_kana, autofocus: true, autocomplete: "last_name_kana" %></span>
+          <spna><%= f.text_field :first_name_kana, autofocus: true, autocomplete: "first_name_kana" %></spna>
+
+        <div class="field">
+          メールアドレス<br/>
+          <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+        </div>
+
+        <div class="field">
+          郵便番号（ハイフンなし）<br/>
+          <%= f.text_field :postcode, autofocus: true, autocomplete: "postcode" %>
+        </div>
+
+        <div class="field">
+          住所<br/>
+          <%= f.text_field :address, autofocus: true, autocomplete: "address" %>
+        </div>
+
+        <div class="field">
+          電話番号（ハイフンなし）<br/>
+          <%= f.text_field :phone_number, autofocus: true, autocomplete: "phone_number" %>
+        </div>
+
+        <div class="field">
+          パスワード<br>
+          <% if @minimum_password_length %>
+          <em>(<%= @minimum_password_length %>文字以上)</em>
+          <% end %><br/>
+          <%= f.password_field :password, autocomplete: "new-password" %>
+        </div>
+
+        <div class="field">
+          パスワード<br>
+          （確認）<br/>
+          <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
+        </div>
+        <br>
+        <div class="actions">
+          <%= f.submit "新規会員登録" %>
+        </div>
+      <% end %>
+      <br>
+      <%= render "devise/shared/links" %>
+      <br>
+
+    </div>
   </div>
-
-  </div　class="field">
-    フリガナ<br>
-    <span>（姓）<%= f.text_field :last_name_kana, autofocus: true, autocomplete: "last_name_kana" %></span>
-    <spna>（名）<%= f.text_field :first_name_kana, autofocus: true, autocomplete: "first_name_kana" %></spna>
-
-  <div class="field">
-    メールアドレス<br/>
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
-  </div>
-
-  <div class="field">
-    郵便番号（ハイフンなし）<br/>
-    <%= f.text_field :postcode, autofocus: true, autocomplete: "postcode" %>
-  </div>
-
-  <div class="field">
-    住所<br/>
-    <%= f.text_field :address, autofocus: true, autocomplete: "address" %>
-  </div>
-
-  <div class="field">
-    電話番号（ハイフンなし）<br/>
-    <%= f.text_field :phone_number, autofocus: true, autocomplete: "phone_number" %>
-  </div>
-
-  <div class="field">
-    パスワード<br>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %>文字以上)</em>
-    <% end %><br/>
-    <%= f.password_field :password, autocomplete: "new-password" %>
-  </div>
-
-  <div class="field">
-    パスワード<br>
-    （確認）<br/>
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
-  <br>
-  <div class="actions">
-    <%= f.submit "新規会員登録" %>
-  </div>
-<% end %>
-<br>
-<%= render "devise/shared/links" %>
+</div>
