--- a/app/views/public/addresses/edit.html.erb
+++ b/app/views/public/addresses/edit.html.erb
@@ -1,22 +1,36 @@
-<% if @address.errors.any? %>
-  <h3 style="color: red"><%= @address.errors.count %>error prohibited this book from being saved:</h3>
-  <div id="error_explanation">
-    <ul style="color: red">
-    <% @address.errors.full_messages.each do |message| %>
-      <li><%= message %></li>
-    <% end %>
-    </ul>
+<div class="container">
+  <div class="row">
+    <div class="ccol-lg-11 offset-lg-1">
+      <% if @address.errors.any? %>
+        <h3 style="color: red"><%= @address.errors.count %>error prohibited this book from being saved:</h3>
+        <div id="error_explanation">
+          <ul style="color: red">
+          <% @address.errors.full_messages.each do |message| %>
+            <li><%= message %></li>
+          <% end %>
+          </ul>
+        </div>
+      <% end %>
+      <br>
+      <h3>配送先編集</h3>
+      <%= form_with model:@address, local: true do |t| %>
+      <table>
+        <tr>
+          <th>郵便番号（ハイフンなし）</th>
+          <td><%= t.text_field :postcode, class: 'form-control' %></td>
+        </tr>
+        <tr>
+          <th>住所</th>
+          <td><%= t.text_field :address, class: 'form-control' %></td>
+        </tr>
+        <tr>
+          <th>宛名</th>
+          <td><%= t.text_field :name, class: 'form-control' %></td>
+        </tr>
+      </table>
+      <%= t.submit '変更内容を保存',class:'btn btn-success' %>
+      <% end %>
+      <br>
+    </div>
   </div>
-<% end %>
-
-<h3>配送先編集</h3>
-<%= form_with model:@address, local: true do |t| %>
-<label>郵便番号（ハイフンなし）</label><br>
-<%= t.text_field :postcode, class: 'form-control' %><br>
-<label>住所</label><br>
-<%= t.text_field :address, class: 'form-control' %><br>
-<label>宛名</label><br>
-<%= t.text_field :name, class: 'form-control' %><br>
-<%= t.submit '変更内容を保存',class:'btn btn-success' %>
-<% end %>
-    	
+</div>
