--- a/app/views/public/addresses/index.html.erb
+++ b/app/views/public/addresses/index.html.erb
@@ -1,54 +1,65 @@
-<% if @address.errors.any? %>
-  <h3 style="color: red"><%= @address.errors.count %>error prohibited this book from being saved:</h3>
-  <div id="error_explanation">
-    <ul style="color: red">
-    <% @address.errors.full_messages.each do |message| %>
-      <li><%= message %></li>
-    <% end %>
-    </ul>
-  </div>
-<% end %>
+<div class="container">
+  <div class="row">
+    <div class="ccol-lg-11 offset-lg-1">
+      <% if @address.errors.any? %>
+        <h3 style="color: red"><%= @address.errors.count %>error prohibited this book from being saved:</h3>
+        <div id="error_explanation">
+          <ul style="color: red">
+          <% @address.errors.full_messages.each do |message| %>
+            <li><%= message %></li>
+          <% end %>
+          </ul>
+        </div>
+      <% end %>
+      <div>
+        <br>
+        <h3>配送先登録/一覧</h3>
+        <%= form_with model: @address, url: addresses_path, local:true do |f| %>
+          <table>
+            <tr>
+              <th>郵便番号（ハイフンなし）</th>
+              <td><%= f.text_field :postcode %></td>
+            </tr>
+            <tr>
+              <th>住所</th>
+              <td><%= f.text_field :address %></td>
+            </tr>
+            <tr>
+              <th>宛名</th>
+              <td><%= f.text_field :name %></td>
+            </tr>
+          </table>
+        <%= f.submit '新規登録' %>
+      </div>
+      <% end %>
 
-<h3>配送先登録/一覧</h3>
-<%= form_with model: @address, url: addresses_path, local:true do |f| %>
-  <div>
-    <label>郵便番号（ハイフンなし）</label>
-    <%= f.text_field :postcode %>
+      <div>
+        <br>
+        <table table border=1 >
+            <thead>
+              <tr>
+                <th class="address_index_list_th_1">郵便番号</th>
+                <th class="address_index_list_th_2">住所</th>
+                <th class="address_index_list_th_1">宛名</th>
+                <th class="address_index_list_th_3">編集・削除</th>
+              </tr>
+            </thead>
+            <% @addresses.each do |address| %>
+            <tbody>
+              <tr>
+                <td>〒<%= address.postcode %></td>
+                <td><%= address.address  %></td>
+                <td><%= address.name %></td>
+                <td class="address_index_list_td_edit_and_destroy">
+                  <span><%= link_to "編集する", edit_address_path(address), class: 'btn btn-sm btn-success' %></span>
+                  <span><%= link_to "削除する", address_path(address), class: 'btn btn-sm btn-danger', method: :delete  %></span>
+                </td>
+              </tr>
+            </tbody>
+            <% end %>
+        </table>
+        <br>
+      </div>
+    </div>
   </div>
-  <div>
-    <label>住所</label>
-    <%= f.text_field :address %>
-  </div>
-  <div>
-    <label>宛名</label>
-    <%= f.text_field :name %>
-  </div>
-    <%= f.submit '新規登録' %>
-  </div>
-<% end %>
-
-<table>
-    <thead>
-      <tr>
-        <th>郵便番</th>
-        <th>住所</th>
-        <th>宛名</th>
-        <th></th>
-      </tr>
-    </thead>
-    <% @addresses.each do |address| %>
-    <tbody>
-      <tr>
-        <td><%= address.postcode %></td>
-        <td><%= address.address  %></td>
-        <td><%= address.name %></td>
-        <td>
-          <%= link_to "編集する", edit_address_path(address), class: 'btn btn-sm btn-success' %>
-        </td>
-        <td>
-          <%= link_to "削除する", address_path(address), class: 'btn btn-sm btn-danger', method: :delete  %>
-        </td>
-      </tr>
-    </tbody>
-    <% end %>
-  </table>
+</div>
