--- a/app/views/public/customers/confirm.html.erb
+++ b/app/views/public/customers/confirm.html.erb
@@ -1,16 +1,25 @@
-<h1>
-  本当に退会しますか？
-</h1>
+<div class="container">
+  <div class="row">
+    <div class="ccol-lg-11 offset-lg-1">
+      <br>
+      <h1>
+        本当に退会しますか？
+      </h1>
 
-<p>
-  退会すると会員登録情報や<br>
-  これまでの購入履歴が閲覧できなくなります。<br>
-  退会する場合は、「退会する」をクリックしてください。
-</p>
+      <p>
+        退会すると会員登録情報や<br>
+        これまでの購入履歴が閲覧できなくなります。<br>
+        退会する場合は、「退会する」をクリックしてください。
+      </p>
 
-<span>
-  <%= link_to "退会しない",customers_path,class: "btn btn-sm btn-success" %>
-</span>
-<span>
-  <%= link_to "退会する", customer_hide_path, method: :patch, data: { confilm: "本当に退会しますか？" }, class: "btn btn-sm btn-danger" %>
-</span>
+      <div>
+        <%= link_to "退会しない",customers_path,class: "btn btn-sm btn-success" %>
+      </div>
+      <br>
+      <div>
+        <%= link_to "退会する", customer_hide_path, method: :patch, data: { confilm: "本当に退会しますか？" }, class: "btn btn-sm btn-danger" %>
+      </div>
+      <br>
+    </div>
+  </div>
+</div>
