--- a/app/assets/stylesheets/orders.scss
+++ b/app/assets/stylesheets/orders.scss
@@ -19,3 +19,24 @@
 .order_list_link{
   width:10%;
 }
+.heading{
+  margin:25% 0;
+}
+.order_info_h{
+  margin-top:1%;
+  margin-bottom:1%;
+}
+// .order_info_address{
+//   width:25%;
+// }
+// .billing_info th,
+// .billing_info td
+// .billing_info tr{
+//   padding: 0% 5%;
+// }
+.box{
+  height:10%;
+}
+.order_contents{
+  margin-bottom:10%;
+}
