--- a/app/views/public/orders/show.html.erb
+++ b/app/views/public/orders/show.html.erb
@@ -1,7 +1,16 @@
-<h3>注文履歴詳細</h3>
+<div class="container">
+    <div class="row w-15">
+      <div class="col-lg-2">
+<div class="heading">
+<h5 style="background-color:#cccccc">注文履歴詳細</h3>
+</div>
+</div>
+</div>
 
-<h4>注文情報</h4>
-<table>
+    <div class="row">
+         <div class="col-lg-7 ">
+<h6>注文情報</h6>
+<table class="order_info" border="1" style="border-collapse: collapse">
   <tr>
     <th>注文日</th>
     <td><%= @order.created_at.to_s(:datetime_jp) %></td>
@@ -14,16 +23,21 @@
   </tr>
   <tr>
     <th>支払方法</th>
-    <td><%=@order.payment_method %></td>
+    <td><%=@order.payment_method_i18n %></td>
   </tr>
   <tr>
     <th>ステータス</th>
-    <td><%=@order.order_status %></td>
+    <td><%=@order.order_status_i18n %></td>
   </tr>
 </table>
+</div>
 
-<h4>請求情報</h4>
-<table>
+
+
+
+  <div class="col-lg-3">
+<h6 >請求情報</h6>
+<table class="billing_info" border="1" style="border-collapse: collapse">
   <tr>
     <th>商品合計</th>
     <% @payment = @order.payment - @order.delivery_charge %>
@@ -38,9 +52,14 @@
     <th><%= @order.payment.to_s(:delimited) %></th>
   </tr>
 </table>
+</div>
+</div>
 
-<h4>注文内容</h4>
-<table>
+<div class="row">
+  <div class="col-lg-12">
+
+<h6 class="order_info_h">注文内容</h6>
+<table class="order_contents" border="1" style="border-collapse: collapse">
   <thead>
     <tr>
       <th>商品</th>
@@ -61,3 +80,6 @@
   </tbody>
   <% end %>
 </table>
+</div>
+</div>
+</div>
