--- a/app/views/public/items/index.html.erb
+++ b/app/views/public/items/index.html.erb
@@ -1,5 +1,5 @@
-<div class="container">
-  <div class="row">
+<div class="container-fluid">
+  <div class="row i-index-row">
     <div class="col-lg-2 my-3">
       <table class="table table-borderd">
         <thead>
@@ -18,7 +18,7 @@
         </tbody>
       </table>
     </div>
-    <div class="col-lg-10">
+    <div class="col-lg-10 i-index-empty">
       <h1>商品一覧</h1>
       <div class="yoko">
         <% @items.each do |item| %>
