--- a/app/views/admin/genres/index.html.erb
+++ b/app/views/admin/genres/index.html.erb
@@ -1,23 +1,31 @@
-<h1>ジャンル一覧・追加</h1>
-<%= form_with model: @genre, url: admin_genres_path, local:true do |f| %>
-  <h4>ジャンル名</h4>
-  <%= f.text_field :name %>
-  <%= f.submit '新規登録' %>
-<% end %>
+<div class="container">
+  <div class="row">
+    <div class="offset-1 col-6 i-show-empty">
+      <h4 class="my-3">ジャンル一覧・追加</h4>
+      <div class="my-2">
+        <%= form_with model: @genre, url: admin_genres_path, local:true do |f| %>
+          ジャンル名　<%= f.text_field :name %>
+          <%= f.submit '新規登録', class: "btn btn-success" %>
+        <% end %>
+      </div>
 
-<table>
-  <thead>
-    <tr>
-      <th>ジャンル</th>
-      <th></th>
-    </tr>
-  </thead>
-  <tbody>
-    <% @genres.each do |genre| %>
-      <tr>
-        <td><%= genre.name %></td>
-        <td><%= link_to '編集する', edit_admin_genre_path(genre) %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+      <table class="table my-3">
+        <thead class="thead-light">
+          <tr>
+            <th>ジャンル</th>
+            <th></th>
+          </tr>
+        </thead>
+        <tbody>
+          <% @genres.each do |genre| %>
+            <tr>
+              <td><%= genre.name %></td>
+              <td><%= link_to '編集する', edit_admin_genre_path(genre), class: "btn btn-success" %></td>
+            </tr>
+          <% end %>
+        </tbody>
+      </table>
+    </div>
+    <div class="offset-5"></div>
+  </div>
+</div>
