--- a/app/views/public/items/show.html.erb
+++ b/app/views/public/items/show.html.erb
@@ -18,7 +18,7 @@
         </tbody>
       </table>
     </div>
-    <div class="col-lg-10 yoko">
+    <div class="col-lg-10 yoko i-show-empty">
       <div class="m-5">
         <%= attachment_image_tag @item, :image, :fill, 350, 200, format: 'jpeg', fallback: "no_image.png" %>
       </div>
