--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -34,7 +34,7 @@
       </div>
 
       <h1>新着商品</h1>
-        <div class="yoko">
+        <div class="top-yoko">
           <% @items.each do |item| %>
             <div class="tate">
               <p>
