--- a/app/assets/stylesheets/admin/orders.scss
+++ b/app/assets/stylesheets/admin/orders.scss
@@ -1,3 +1,12 @@
 // Place all the styles related to the admin::orders controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+.paginate{
+  text-align:center;
+}
+.admin_total{
+  margin-top:50%;
+}
+.admin_order_costomer{
+  margin-bottom:5%;
+}
