--- a/app/assets/stylesheets/orders.scss
+++ b/app/assets/stylesheets/orders.scss
@@ -40,3 +40,16 @@
 .order_contents{
   margin-bottom:10%;
 }
+.confirm_payment_text{
+  margin-bottom:3%;
+}
+.confirm_order_contents{
+  margin-bottom:5%;
+}
+.confirm_address{
+  margin-bottom:3%;
+}
+.confirm_botton{
+  text-align:center;
+  margin-bottom:5%;
+}
