--- a/app/views/public/orders/new.html.erb
+++ b/app/views/public/orders/new.html.erb
@@ -1,3 +1,4 @@
+<div class="container">
 <h3>注文情報入力</h3>
 <%= form_with model:@order,url: order_confirm_path, method: :post,local: true do |f| %>
   <label>支払方法</label>
@@ -29,21 +30,35 @@
   <%= f.label :address, "新しいお届け先" %>
   <br>
 
+  <table class="order_new_address">
+  <tr>
+    <td>
   <%= f.label :postcode, "郵便番号(ハイフンなし）" %>
+  </td>
+  <td>
   <%= f.text_field :postcode %>
-  <br>
-
+  </td>
+  
+  <tr>
+    <td>
   <%= f.label :address, "住所" %>
+  </td>
+  <td>
   <%= f.text_field :address %>
-  <br>
-
+  </td>
+  
+  <tr>
+    <td>
   <%= f.label :name, "宛名" %>
+  </td>
+    <td>
   <%= f.text_field :name %>
+  </td>
+  </table>
   <br>
   
   <%= f.submit "確認画面へ進む" , class:"btn btn-primary" %>
 
 
-
-
 <% end %>
+</div>
