--- a/app/views/admin/items/new.html.erb
+++ b/app/views/admin/items/new.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
-  <div class="row">
-    <h4>商品新規登録</h4>
+  <div class="row my-3">
+    <h3 class="pr-3 pt-3">商品新規登録</h3>
     <%= form_with model:@item, url: admin_items_path, local:true do |f| %>
     <table class="customer_table">
         <tr>
