--- a/app/views/public/searchs/search.html.erb
+++ b/app/views/public/searchs/search.html.erb
@@ -1,32 +1,37 @@
-<% if @name.present? %>
-  <h2><%= @name %>一覧</h2>
-<% else %>
-  <h2>'<%= @value %>'の検索結果</h2>
-<% end %>
-
-<table class="table">
-    <thead>
-        <tr>
-            <th></th>
-            <th>商品名</th>
-            <th>価格</th>
-        </tr>
-    </thead>
-<% @datas.each do |item| %>
-    <tbody>
-        <tr>
-            <th>
-                <%= link_to item_path(item) do %>
-                <%= attachment_image_tag item, :image, :fill, 100, 60, format: 'jpeg', fallback: "no_image.png" %>
+<div class="container">
+    <div class="row my-3">
+        <div class="col-lg-12">
+            <% if @name.present? %>
+              <h2><%= @name %>一覧</h2>
+            <% else %>
+              <h2>'<%= @value %>'の検索結果</h2>
+            <% end %>
+            <table class="table">
+                <thead class="thead-light">
+                    <tr>
+                        <th></th>
+                        <th>商品名</th>
+                        <th>価格</th>
+                    </tr>
+                </thead>
+                <% @datas.each do |item| %>
+                    <tbody>
+                        <tr>
+                            <th>
+                                <%= link_to item_path(item) do %>
+                                    <%= attachment_image_tag item, :image, :fill, 100, 60, format: 'jpeg', fallback: "no_image.png" %>
+                                <% end %>
+                            </th>
+                            <th>
+                                <%= item.name %>
+                            </th>
+                            <th>
+                                ￥<%= item.add_tax_price.to_s(:delimited) %>
+                            </th>
+                        </tr>
+                    </tbody>
                 <% end %>
-            </th>
-            <th>
-                <%= item.name %>
-            </th>
-            <th>
-                ￥<%= item.add_tax_price.to_s(:delimited) %>
-            </th>
-
-        </tr>
-    </tbody>
-<% end %>
+            </table>
+        </div>
+    </div>
+</div>
