--- a/app/assets/stylesheets/orders.scss
+++ b/app/assets/stylesheets/orders.scss
@@ -53,3 +53,12 @@
   text-align:center;
   margin-bottom:5%;
 }
+.billing_info_td{
+  background-color:silver;
+}
+.order_info_th{
+  background-color:silver;
+}
+.th_color{
+  background-color:silver;
+}
