--- a/app/views/public/orders/index.html.erb
+++ b/app/views/public/orders/index.html.erb
@@ -6,12 +6,12 @@
 <table class="order_list" border="1" style="border-collapse: collapse" >
   <thead>
     <tr>
-      <th class="order_list_created_at">注文日</th>
-      <th class="order_list_address">配送先</th>
-      <th class="order_list_item_names">注文商品</th>
-      <th class="order_list_payment">支払金額</th>
-      <th class="order_list_status">ステータス</th>
-      <th class="order_list_link">注文詳細</th>
+      <th class="th_color">注文日</th>
+      <th class="th_color">配送先</th>
+      <th class="th_color">注文商品</th>
+      <th class="th_color">支払金額</th>
+      <th class="th_color">ステータス</th>
+      <th class="th_color">注文詳細</th>
     </tr>
   </thead>
   <tbody>
