--- a/app/views/public/orders/show.html.erb
+++ b/app/views/public/orders/show.html.erb
@@ -12,21 +12,21 @@
 <h6>注文情報</h6>
 <table class="order_info" border="1" style="border-collapse: collapse">
   <tr>
-    <th>注文日</th>
+    <th class="th_color">注文日</th>
     <td><%= @order.created_at.to_s(:datetime_jp) %></td>
   </tr>
   <tr>
-    <th>配送先</th>
+    <th class="th_color">配送先</th>
     <td>〒<%= @order.postcode %><br>
        <%= @order.address %><br>
        <%= @order.name %></td>
   </tr>
   <tr>
-    <th>支払方法</th>
+    <th class="th_color">支払方法</th>
     <td><%=@order.payment_method_i18n %></td>
   </tr>
   <tr>
-    <th>ステータス</th>
+    <th class="th_color">ステータス</th>
     <td><%=@order.order_status_i18n %></td>
   </tr>
 </table>
@@ -39,16 +39,16 @@
 <h6 >請求情報</h6>
 <table class="billing_info" border="1" style="border-collapse: collapse">
   <tr>
-    <th>商品合計</th>
+    <td class="th_color">商品合計</td>
     <% @payment = @order.payment - @order.delivery_charge %>
-    <th><%= @payment.to_s(:delimited) %></th>
+    <td><%= @payment.to_s(:delimited) %></td>
   </tr>
   <tr>
-    <th>配送料</th>
-    <th><%= @order.delivery_charge %></th>
+    <td class="th_color">配送料</td>
+    <td><%= @order.delivery_charge %></td>
   </tr>
   <tr>
-    <th>ご請求額</th>
+    <th class="th_color">ご請求額</th>
     <th><%= @order.payment.to_s(:delimited) %></th>
   </tr>
 </table>
@@ -62,10 +62,10 @@
 <table class="order_contents" border="1" style="border-collapse: collapse">
   <thead>
     <tr>
-      <th>商品</th>
-      <th>単価（税込）</th>
-      <th>個数</th>
-      <th>小計</th>
+      <th class="th_color">商品</th>
+      <th class="th_color">単価（税込）</th>
+      <th class="th_color">個数</th>
+      <th class="th_color">小計</th>
     </tr>
   </thead>
   <% @order.order_items.each do |items| %>
