--- a/app/views/public/searchs/search.html.erb
+++ b/app/views/public/searchs/search.html.erb
@@ -1,3 +1,4 @@
+
 <% if @name.present? %>
   <h2><%= @name %>一覧</h2>
 <% else %>
@@ -29,4 +30,5 @@
 
         </tr>
     </tbody>
+    </table>
 <% end %>
