--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -57,7 +57,7 @@ wrepper {
 }
 
 .i-index-empty {
- width: 100%;
+ width: 1200px;
  flex-grow: 1;
 }
 
@@ -88,4 +88,12 @@ wrepper {
 
 .plus-botton {
   margin-left: 950px;
+}
+
+.navbar-toggler .navbar-toggler-icon {
+  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(188,52,69,1)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
+}
+
+.th {
+  vertical-align: bottom;
 }
