--- a/app/views/admin/items/index.html.erb
+++ b/app/views/admin/items/index.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
-  <div clsss="row">
+  <div clsss="row my-3">
     <div class="a-i-i">
       <div class="my-3 h4">商品一覧</div>
       <div class="my-3 ">
