--- a/app/views/public/orders/show.html.erb
+++ b/app/views/public/orders/show.html.erb
@@ -39,7 +39,7 @@
 
 
 
- 
+
 
 <table class="billing_info col-lg-3 offset-lg-1" border="1" style="border-collapse: collapse">
   <tr>
@@ -57,13 +57,14 @@
   </tr>
 </table>
 
-<!--</div>-->
+</div>
 
 <div class="row">
   <div class="col-lg-12">
 
 <h6 class="order_info_h">注文内容</h6>
-<table class="order_contents" border="1" style="border-collapse: collapse">
+</div>
+<table class="order_contents col-lg-6" border="1" style="border-collapse: collapse">
   <thead>
     <tr>
       <th class="th_color">商品</th>
